--- a/CSSWENGChai/CHAI/src/css/styles.css
+++ b/CSSWENGChai/CHAI/src/css/styles.css
@@ -1,3 +1,4 @@
+@import url('https://cdn-uicons.flaticon.com/3.0.0/uicons-solid-straight/css/uicons-solid-straight.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
