--- a/CSSWENGChai/CHAI/src/css/styles.css
+++ b/CSSWENGChai/CHAI/src/css/styles.css
@@ -2,3 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 @import "tailwindcss";
 
+.input-text{
+    @apply font-[Montserrat] text-white border-solid border-1 border-[#254151] bg-[#3EA08D] rounded-[5px] p-1.5;
+}
+
