--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -8,8 +8,14 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  body {
+    @apply bg-secondary text-white font-sans pb-25;
+  }
+}
+
 .input-text {
-  @apply w-full font-[Montserrat] text-white border-solid border border-[#254151] bg-[#3EA08D] rounded-[5px] p-1.5;
+  @apply w-full font-sans text-white border-solid border border-secondary bg-tertiary rounded-[5px] p-1.5;
 }
 
 .firebase-emulator-warning {
