--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,3 +21,44 @@
 .firebase-emulator-warning {
   display: none !important;
 }
+@property --percentage {
+  syntax: '<number>';
+  inherits: true;
+  initial-value: 0;
+}
+
+[role="semicircularprogressbar"] {
+  --percentage: var(--value);
+  --primary: #333333;
+  --secondary: #64A876;
+  --size: 300px;
+  width: 20%;
+  aspect-ratio: 2 / 1;
+  border-radius: 50% / 100% 100% 0 0;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+[role="semicircularprogressbar"]::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: conic-gradient(from 0.75turn at 50% 100%, var(--primary) calc(var(--percentage) * 1% / 2), var(--secondary) calc(var(--percentage) * 1% / 2 + 0.1%));
+  mask: radial-gradient(at 50% 100%, white 55%, transparent 55.5%);
+  mask-mode: alpha;
+  -webkit-mask: radial-gradient(at 50% 100%, #0000 55%, #000 55.5%);
+  -webkit-mask-mode: alpha;
+}
+
+[role="semicircularprogressbar"]::after {
+  counter-reset: percentage var(--value);
+  content: '';
+  font-size: calc(var(--size) / 5);
+  color: var(--primary);
+}
