--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -62,3 +62,14 @@
   font-size: calc(var(--size) / 5);
   color: var(--primary);
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+input[type=number] {
+    -moz-appearance:textfield; /* Firefox */
+}
